MVC structure implemented

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -33,7 +33,7 @@
             <div class="home-content-left">
                 <h2>Get reports quickly and easily</h2>
                 <p>With <strong>Zabbix Reports</strong> you can generate data reports from the best data analysis platforms!</p>
-                <button>Tru it now</button>
+                <a href="#">Try it now</a>
             </div>
             <div class="home-content-left">
                 <img src="/images/home-illustration.svg" alt="minimalistic work illustration" />
