--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,11 +1,17 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
 
 .hide-logo-h1 {
   visibility: hidden;
   width: 0;
-  height: 0; }
+  height: 0;
+}
 
+.home {
+  background: lightgreen;
+}
 /*# sourceMappingURL=index.css.map */
