--- a/public/stylesheets/index.scss
+++ b/public/stylesheets/index.scss
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    text-decoration: none;
     box-sizing: border-box;
 }
   
@@ -12,4 +13,10 @@
 
 .home{
     background: lightgreen;
+}
+
+.feature-card-img{
+    img{
+        width: 150px;
+    }
 }
