--- a/src/views/index.html
+++ b/src/views/index.html
@@ -40,6 +40,51 @@
             </div>
         </article>
     </section>
+    <section class="features-container">
+        <div class="subtitle-container">
+            <h2>Zabbix Reports is amazing</h2>
+        </div>
+        <div class="feature-cards-container">
+            <article class="feature-card">
+                <div class="feature-card-img">
+                    <img src="/images/home-illustration.svg" alt="minimalistic work illustration" />
+                </div>
+                <div class="text-container">
+                    <h3>Lorem ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis erat in molestie faucibus</p>
+                </div>
+            </article>
+            <article class="feature-card">
+                <div class="feature-card-img">
+                    <img src="/images/home-illustration.svg" alt="minimalistic work illustration" />
+                </div>
+                <div class="text-container">
+                    <h3>Lorem ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis erat in molestie faucibus</p>
+                </div>
+            </article>
+            <article class="feature-card">
+                <div class="feature-card-img">
+                    <img src="/images/home-illustration.svg" alt="minimalistic work illustration" />
+                </div>
+                <div class="text-container">
+                    <h3>Lorem ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis erat in molestie faucibus</p>
+                </div>
+            </article>
+        </div>
+    </section>
+    <section class="prices">
+        <article class="price-card">
+            PRICE CARD
+        </article>
+    </section>
+    <section class="video-tutorial">
+        <video src="#"></video>
+    </section>
+    <section class="getting-started">
+
+    </section>
 </body>
 
 </html>
