home style complete

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -20,7 +20,7 @@
             </div>
             <nav role="navigation">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <!-- <li><a href="#">Home</a></li> -->
                     <li><a href="#">About</a></li>
                     <li><a href="#">Prices</a></li>
                     <li><a href="#">Videos</a></li>
@@ -31,21 +31,21 @@
         </header>
         <article class="home-content">
             <div class="home-content-left">
-                <h2>Get reports quickly and easily</h2>
+                <h2>Get reports <br /> quickly and easily</h2>
                 <p>With <strong>Zabbix Reports</strong> you can generate data reports from the best data analysis platforms!</p>
                 <a href="#">Try it now</a>
             </div>
-            <div class="home-content-left">
+            <div class="home-content-right">
                 <img src="/images/home-illustration.svg" alt="minimalistic work illustration" />
             </div>
         </article>
     </section>
-    <section class="features-container">
+    <section class="features">
         <div class="subtitle-container">
             <h2>Zabbix Reports is amazing</h2>
         </div>
-        <div class="feature-cards-container">
-            <article class="feature-card">
+        <div class="feature-cards">
+            <article>
                 <div class="feature-card-img">
                     <img src="/images/home-illustration.svg" alt="minimalistic work illustration" />
                 </div>
@@ -54,7 +54,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis erat in molestie faucibus</p>
                 </div>
             </article>
-            <article class="feature-card">
+            <article>
                 <div class="feature-card-img">
                     <img src="/images/home-illustration.svg" alt="minimalistic work illustration" />
                 </div>
@@ -63,7 +63,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis erat in molestie faucibus</p>
                 </div>
             </article>
-            <article class="feature-card">
+            <article>
                 <div class="feature-card-img">
                     <img src="/images/home-illustration.svg" alt="minimalistic work illustration" />
                 </div>
