--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,19 +1,216 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap");
 * {
   margin: 0;
   padding: 0;
-  text-decoration: none;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+* a {
+  text-decoration: none;
+}
+
+* section {
+  max-width: 100vw;
+}
+
+* ul {
+  list-style: none;
+}
+
+* body {
+  font-family: 'Montserrat', sans-serif;
+  background-color: #ffffff;
+}
+
+section.home {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100vh;
+}
+
+section.home header {
+  min-width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 32px 72px;
+}
+
+section.home ul {
+  width: 530px;
+  height: 35px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+section.home ul li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+section.home ul li a {
+  font-size: 16px;
+  color: #000000;
+  font-weight: 600;
+}
+
+section.home ul li:last-child a {
+  font-weight: 700;
+  padding: 8px 16px;
+  border-radius: 20px;
+  border: 2px solid #000000;
+}
+
+section.home article.home-content {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0 72px;
+}
+
+section.home article.home-content div.home-content-left {
+  height: 100%;
+  padding-top: 118px;
+}
+
+section.home article.home-content div.home-content-left h2 {
+  font-size: 48px;
+  font-weight: 700;
+  color: #3A3A3A;
+}
+
+section.home article.home-content div.home-content-left p {
+  margin-top: 8px;
+  margin-bottom: 32px;
+  font-size: 24px;
+  width: 521px;
+  color: #727176;
+  text-align: justify;
+  font-weight: 500;
+}
+
+section.home article.home-content div.home-content-left a {
+  background: #727176;
+  color: #fff;
+  border-radius: 20px;
+  padding: 8px 16px;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+section.home article.home-content div.home-content-right {
+  height: 100%;
+  width: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+section.home article.home-content div.home-content-right img {
+  width: 560px;
+}
+
+section.features {
+  background: lightslategray;
+  height: 586px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+section.features div.subtitle-container {
+  border: 1px solid greenyellow;
+}
+
+section.features div.subtitle-container h2 {
+  margin-top: 16px;
+  text-align: center;
+  font-size: 32px;
+  font-weight: 700;
+}
+
+section.features div.feature-cards {
+  border: 1px solid lightsalmon;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+section.features div.feature-cards article {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+section.features div.feature-cards article div.feature-card-img img {
+  width: 281px;
+  height: 281px;
 }
 
 .hide-logo-h1 {
   visibility: hidden;
   width: 0;
   height: 0;
-}
-
-.home {
-  background: lightgreen;
 }
 
 .feature-card-img img {
