--- a/public/stylesheets/index.scss
+++ b/public/stylesheets/index.scss
@@ -1,18 +1,176 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap');
+
+$body-color: #ffffff;
+
 *{
     margin: 0;
     padding: 0;
-    text-decoration: none;
     box-sizing: border-box;
+
+    a{
+        text-decoration: none;
+    }
+
+    section{
+        max-width: 100vw;
+    }
+
+    ul{
+        list-style: none;
+    }
+
+    body{
+        font-family: 'Montserrat', sans-serif;
+        background-color: $body-color;
+    }
 }
-  
+
+section.home{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+
+    header{
+        min-width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 32px 72px;
+    }
+
+    ul{
+        width: 530px;
+        height: 35px;
+        display: flex;
+        justify-content: space-between;
+
+        li{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            a{
+                font-size: 16px;
+                color: #000000;
+                font-weight: 600;
+            }
+
+            &:last-child{
+                a{
+                    font-weight: 700;
+                    padding: 8px 16px;
+                    border-radius: 20px;
+                    border: 2px solid #000000;
+                }
+            }
+        }
+    }
+
+    article.home-content{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        padding: 0 72px;
+
+        div.home-content-left{
+            height: 100%;
+            padding-top: 118px;
+
+            h2{
+                font-size: 48px;
+                font-weight: 700;
+                color: #3A3A3A;
+            }
+
+            p{
+                margin-top: 8px;
+                margin-bottom: 32px;
+                font-size: 24px;
+                width: 521px;
+                color: #727176;
+                text-align: justify;
+                font-weight: 500;
+            }
+
+            a{
+                background: #727176;
+                color: #fff;
+                border-radius: 20px;
+                padding: 8px 16px;
+                font-size: 16px;
+                font-weight: 600;
+            }
+        }
+        
+        div.home-content-right{
+            height: 100%;
+            width: 70%;
+            display: flex;
+            justify-content: flex-end;
+
+            img{
+                width: 560px;
+            }
+        }
+    }
+}
+
+section.features{
+    background: lightslategray;
+    height: 586px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    div.subtitle-container{
+        border: 1px solid greenyellow;
+        
+        h2{
+            margin-top: 16px;
+            text-align: center;
+            font-size: 32px;
+            font-weight: 700;
+        }
+    }
+
+    div.feature-cards{
+        border: 1px solid lightsalmon;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+
+        article{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            div.feature-card-img{
+                img{
+                    width: 281px;
+                    height: 281px;
+                }
+            }
+
+            div.text-container{
+
+            }
+        }
+    }
+}
+
+
+
+
+
 .hide-logo-h1{
     visibility: hidden; 
     width: 0; 
     height: 0;
-}
-
-.home{
-    background: lightgreen;
 }
 
 .feature-card-img{
