--- a/src/views/index.html
+++ b/src/views/index.html
@@ -15,15 +15,15 @@
     <section class="home">
         <header>
             <div class="logo">
-                <h1 class="hide-logo-h1">Zabbix Reports</h1>
+                <h1>Zabbix Reports</h1>
                 <img importance="high" src="/images/zabbix-logo.svg" alt="Zabbix Reports Logo" />
             </div>
             <nav role="navigation">
                 <ul>
                     <!-- <li><a href="#">Home</a></li> -->
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Prices</a></li>
-                    <li><a href="#">Videos</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#prices">Prices</a></li>
+                    <li><a href="#video">Videos</a></li>
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">Start Now</a></li>
                 </ul>
@@ -32,15 +32,16 @@
         <article class="home-content">
             <div class="home-content-left">
                 <h2>Get reports <br /> quickly and easily</h2>
-                <p>With <strong>Zabbix Reports</strong> you can generate data reports from the best data analysis platforms!</p>
-                <a href="#">Try it now</a>
+                <p>With <strong>Zabbix Reports</strong> you can generate data reports from the best data analysis
+                    platforms!</p>
+                <a href="#getting-started">Try it now</a>
             </div>
             <div class="home-content-right">
                 <img src="/images/home-illustration.svg" alt="minimalistic work illustration" />
             </div>
         </article>
     </section>
-    <section class="features">
+    <section class="features" id="about">
         <div class="subtitle-container">
             <h2>Zabbix Reports is amazing</h2>
         </div>
@@ -51,7 +52,8 @@
                 </div>
                 <div class="text-container">
                     <h3>Lorem ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis erat in molestie faucibus</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis erat in molestie faucibus
+                    </p>
                 </div>
             </article>
             <article>
@@ -60,7 +62,8 @@
                 </div>
                 <div class="text-container">
                     <h3>Lorem ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis erat in molestie faucibus</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis erat in molestie faucibus
+                    </p>
                 </div>
             </article>
             <article>
@@ -69,22 +72,55 @@
                 </div>
                 <div class="text-container">
                     <h3>Lorem ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis erat in molestie faucibus</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis erat in molestie faucibus
+                    </p>
                 </div>
             </article>
         </div>
     </section>
-    <section class="prices">
-        <article class="price-card">
-            PRICE CARD
+    <section class="ads">
+        <article class="prices" id="prices">
+            <div class="subtitle-container">
+                <h2>Start free, Pay only if you like it!</h2>
+            </div>
+            <div class="price-cards">
+                <div class="price-card big"></div>
+                <div class="price-card small"></div>
+            </div>
+        </article>
+        <article class="demo-video" id="video">
+            <div class="subtitle-container">
+                <h2>Learn how to generate your first <br /> report</h2>
+            </div>
+            <div class="video-container">
+                <video controls>
+                    <source src="videos/demo.mp4" type="video/mp4">
+                </video>
+            </div>
         </article>
     </section>
-    <section class="video-tutorial">
-        <video src="#"></video>
-    </section>
-    <section class="getting-started">
+    <section class="getting-started" id="getting-started">
+        <div class="subtitle-container">
+            <h2>Try it now for free!</h2>
+        </div>
+        <div class="content">
+            <div class="content-left">
 
+            </div>
+            <div class="content-right">
+                <h3>Sign in with these credentials</h3>
+                <span>Login: demo</span>
+                <span>Password: demo</span>
+                <div class="link-container">
+                    <a href="#">Try it now</a>
+                </div>
+            </div>
+        </div>
+        </div>
     </section>
+    <footer>
+        <h1>FOOTER</h1>
+    </footer>
 </body>
 
 </html>
