--- a/public/stylesheets/index.scss
+++ b/public/stylesheets/index.scss
@@ -37,42 +37,53 @@ section.home{
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 32px 72px;
-    }
+        padding: 32px 64px;
 
-    ul{
-        width: 530px;
-        height: 35px;
-        display: flex;
-        justify-content: space-between;
-
-        li{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            a{
-                font-size: 16px;
-                color: #000000;
-                font-weight: 600;
+        div.logo{
+            h1{
+                visibility: hidden; 
+                width: 0; 
+                height: 0;
             }
+        }
 
-            &:last-child{
-                a{
-                    font-weight: 700;
-                    padding: 8px 16px;
-                    border-radius: 20px;
-                    border: 2px solid #000000;
+        nav{
+            ul{
+                width: 530px;
+                height: 35px;
+                display: flex;
+                justify-content: space-between;
+        
+                li{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+        
+                    a{
+                        font-size: 16px;
+                        color: #000000;
+                        font-weight: 600;
+                    }
+        
+                    &:last-child{
+                        a{
+                            font-weight: 700;
+                            padding: 8px 16px;
+                            border-radius: 20px;
+                            border: 2px solid #000000;
+                        }
+                    }
                 }
             }
         }
     }
 
+
     article.home-content{
         width: 100%;
         height: 100%;
         display: flex;
-        padding: 0 72px;
+        padding: 0 64px;
 
         div.home-content-left{
             height: 100%;
@@ -88,7 +99,7 @@ section.home{
                 margin-top: 8px;
                 margin-bottom: 32px;
                 font-size: 24px;
-                width: 521px;
+                width: 512px;
                 color: #727176;
                 text-align: justify;
                 font-weight: 500;
@@ -111,14 +122,14 @@ section.home{
             justify-content: flex-end;
 
             img{
-                width: 560px;
+                width: 80%;
             }
         }
     }
 }
 
 section.features{
-    background: lightslategray;
+    background: #F5F5F5;
     height: 586px;
     display: flex;
     flex-direction: column;
@@ -126,8 +137,6 @@ section.features{
     justify-content: center;
 
     div.subtitle-container{
-        border: 1px solid greenyellow;
-        
         h2{
             margin-top: 16px;
             text-align: center;
@@ -137,8 +146,8 @@ section.features{
     }
 
     div.feature-cards{
-        border: 1px solid lightsalmon;
         height: 100%;
+        width: 100%;
         display: flex;
         align-items: center;
         justify-content: space-around;
@@ -157,24 +166,166 @@ section.features{
             }
 
             div.text-container{
+                h3{
+                    color: #545F63;
+                    font-weight: 500;
+                    font-size: 20px;
+                    margin-bottom: 8px;
+                    text-align: center;
+                }
 
+                p{
+                    color: #545F63;
+                    font-size: 16px;
+                    font-weight: 400;
+                    text-align: center;
+                    width: 211px;
+                }
             }
         }
     }
 }
 
+section.ads{
+    background: #fcfcfc;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    padding: 0 64px;
 
+    div.subtitle-container{
+        h2{
+            margin: 32px 0;
+            text-align: center;
+            font-size: 32px;
+            font-weight: 700;
+            color: #727176;
+        }
+    }
 
+    article.prices{
+        display: flex;
+        flex-direction: column;
 
+        div.price-cards{
+            height: 515px;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            
+            div.price-card{
+                background: #C4C4C4;
+                height: 100%;
+            }
 
-.hide-logo-h1{
-    visibility: hidden; 
-    width: 0; 
-    height: 0;
+            div.big {
+                width: 68%;
+            }
+
+            div.small{
+                width: 28%;
+            }
+        }
+    }
+
+    article.demo-video{
+        div.video-container{
+            width: 100%;
+
+            video{
+                width: 100%;
+            }
+        }
+    }
 }
 
-.feature-card-img{
-    img{
-        width: 150px;
+section.getting-started{
+    background: #F5F5F5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0 64px 64px 64px;
+
+    div.subtitle-container{
+        h2{
+            margin: 32px 0;
+            text-align: center;
+            font-size: 32px;
+            font-weight: 700;
+            color: #727176;
+        }
+    }
+
+    div.content{
+
+        width: 100%;
+        display: flex;
+        align-content: center;
+        justify-content: center;
+
+        div.content-left{
+            width: 65%;
+            height: 388px;
+            background: #C4C4C4;
+        }
+
+        div.content-right{
+            width: 35%;
+            padding: 0 32px;
+            display: flex;
+            flex-direction: column;
+            align-self: center;
+            justify-content: flex-start;
+
+            h3{
+                font-size: 20px;
+                font-weight: 600;
+                color: #727176;
+                margin-bottom: 8px;
+            }
+
+            span{
+                font-size: 16px;
+                font-weight: 400;
+                color: #727176;
+            }
+            
+            div.link-container{
+
+                margin-top: 32px;
+                
+                a{
+                    background: #727176;
+                    color: #fff;
+                    border-radius: 20px;
+                    padding: 8px 16px;
+                    font-size: 16px;
+                    font-weight: 600;
+                    
+                }
+            }
+
+        }
+    }
+}
+
+footer{
+    width: 100%;
+    height: 200px;
+    font-size: 20px;
+    background: #3A3A3A;
+    color: #fff;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+
+    h1{
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        justify-content: center;
     }
 }
