--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -21,6 +21,30 @@
 * body {
   font-family: 'Montserrat', sans-serif;
   background-color: #ffffff;
+  overflow-x: hidden !important;
+  position: relative;
+}
+
+* body div#effect {
+  width: 100% !important;
+  height: 100% !important;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 20 !important;
+  background: rgba(46, 46, 46, 0.85);
+}
+
+* body .hide-effect {
+  display: none;
+}
+
+* body .show-effect {
+  display: block;
+}
+
+* .hide-overflow {
+  overflow: hidden !important;
 }
 
 section.home {
@@ -38,6 +62,8 @@ section.home {
       -ms-flex-pack: center;
           justify-content: center;
   height: 100vh;
+  min-height: 100vh;
+  padding-bottom: 32px;
 }
 
 section.home header {
@@ -52,6 +78,10 @@ section.home header {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 32px 64px;
+}
+
+section.home header #mobile-menu, section.home header .show-mobile-menu-icon {
+  display: none;
 }
 
 section.home header div.logo h1 {
@@ -96,6 +126,10 @@ section.home header nav ul li:last-child a {
   border: 2px solid #000000;
 }
 
+section.home header .hide-menu {
+  display: none;
+}
+
 section.home article.home-content {
   width: 100%;
   height: 100%;
@@ -107,26 +141,39 @@ section.home article.home-content {
 
 section.home article.home-content div.home-content-left {
   height: 100%;
-  padding-top: 118px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-section.home article.home-content div.home-content-left h2 {
+section.home article.home-content div.home-content-left div.text-content {
+  max-width: 100%;
+}
+
+section.home article.home-content div.home-content-left div.text-content h2 {
   font-size: 48px;
   font-weight: 700;
+  width: 70%;
   color: #3A3A3A;
 }
 
-section.home article.home-content div.home-content-left p {
+section.home article.home-content div.home-content-left div.text-content p {
   margin-top: 8px;
   margin-bottom: 32px;
   font-size: 24px;
-  width: 512px;
+  width: 60%;
   color: #727176;
   text-align: justify;
   font-weight: 500;
 }
 
-section.home article.home-content div.home-content-left a {
+section.home article.home-content div.home-content-left div.text-content a {
   background: #727176;
   color: #fff;
   border-radius: 20px;
@@ -147,12 +194,12 @@ section.home article.home-content div.home-content-right {
 }
 
 section.home article.home-content div.home-content-right img {
-  width: 80%;
+  width: 100%;
 }
 
 section.features {
   background: #F5F5F5;
-  height: 586px;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -168,8 +215,12 @@ section.features {
           justify-content: center;
 }
 
+section.features br {
+  display: none;
+}
+
 section.features div.subtitle-container h2 {
-  margin-top: 16px;
+  margin: 32px 0;
   text-align: center;
   font-size: 32px;
   font-weight: 700;
@@ -178,6 +229,8 @@ section.features div.subtitle-container h2 {
 section.features div.feature-cards {
   height: 100%;
   width: 100%;
+  margin-top: 64px;
+  padding-bottom: 32px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -261,11 +314,14 @@ section.ads article.prices {
 }
 
 section.ads article.prices div.price-cards {
-  height: 515px;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -276,15 +332,19 @@ section.ads article.prices div.price-cards {
 
 section.ads article.prices div.price-cards div.price-card {
   background: #C4C4C4;
-  height: 100%;
+  height: 400px;
 }
 
 section.ads article.prices div.price-cards div.big {
-  width: 68%;
+  -webkit-box-flex: .68;
+      -ms-flex: .68;
+          flex: .68;
 }
 
 section.ads article.prices div.price-cards div.small {
-  width: 28%;
+  -webkit-box-flex: .28;
+      -ms-flex: .28;
+          flex: .28;
 }
 
 section.ads article.demo-video div.video-container {
@@ -326,6 +386,10 @@ section.getting-started div.content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -ms-flex-line-pack: center;
       align-content: center;
   -webkit-box-pack: center;
@@ -334,14 +398,18 @@ section.getting-started div.content {
 }
 
 section.getting-started div.content div.content-left {
-  width: 65%;
+  -webkit-box-flex: .65;
+      -ms-flex: .65;
+          flex: .65;
   height: 388px;
   background: #C4C4C4;
 }
 
 section.getting-started div.content div.content-right {
-  width: 35%;
-  padding: 0 32px;
+  -webkit-box-flex: .35;
+      -ms-flex: .35;
+          flex: .35;
+  padding-left: 32px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
