--- a/public/stylesheets/index.scss
+++ b/public/stylesheets/index.scss
@@ -22,6 +22,30 @@ $body-color: #ffffff;
     body{
         font-family: 'Montserrat', sans-serif;
         background-color: $body-color;
+        overflow-x: hidden !important;
+        position: relative;
+        
+        div#effect{
+            width: 100% !important;
+            height: 100% !important;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 20 !important;
+            background: rgba(46, 46, 46, 0.85);
+        }
+
+        .hide-effect{
+            display: none;
+        }
+
+        .show-effect{
+            display: block;
+        }
+    }
+
+    .hide-overflow{
+        overflow: hidden !important;
     }
 }
 
@@ -31,6 +55,8 @@ section.home{
     align-items: center;
     justify-content: center;
     height: 100vh;
+    min-height: 100vh;
+    padding-bottom: 32px;
 
     header{
         min-width: 100%;
@@ -38,6 +64,10 @@ section.home{
         align-items: center;
         justify-content: space-between;
         padding: 32px 64px;
+
+        #mobile-menu, .show-mobile-menu-icon{
+            display: none;
+        }
 
         div.logo{
             h1{
@@ -76,8 +106,11 @@ section.home{
                 }
             }
         }
-    }
 
+        .hide-menu{
+            display: none;
+        }
+    }
 
     article.home-content{
         width: 100%;
@@ -87,31 +120,39 @@ section.home{
 
         div.home-content-left{
             height: 100%;
-            padding-top: 118px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
 
-            h2{
-                font-size: 48px;
-                font-weight: 700;
-                color: #3A3A3A;
-            }
+            div.text-content{
 
-            p{
-                margin-top: 8px;
-                margin-bottom: 32px;
-                font-size: 24px;
-                width: 512px;
-                color: #727176;
-                text-align: justify;
-                font-weight: 500;
-            }
-
-            a{
-                background: #727176;
-                color: #fff;
-                border-radius: 20px;
-                padding: 8px 16px;
-                font-size: 16px;
-                font-weight: 600;
+                max-width: 100%;
+                
+                h2{
+                    font-size: 48px;
+                    font-weight: 700;
+                    width: 70%;
+                    color: #3A3A3A;
+                }
+    
+                p{
+                    margin-top: 8px;
+                    margin-bottom: 32px;
+                    font-size: 24px;
+                    width: 60%;
+                    color: #727176;
+                    text-align: justify;
+                    font-weight: 500;
+                }
+    
+                a{
+                    background: #727176;
+                    color: #fff;
+                    border-radius: 20px;
+                    padding: 8px 16px;
+                    font-size: 16px;
+                    font-weight: 600;
+                }
             }
         }
         
@@ -122,7 +163,7 @@ section.home{
             justify-content: flex-end;
 
             img{
-                width: 80%;
+                width: 100%;
             }
         }
     }
@@ -130,15 +171,19 @@ section.home{
 
 section.features{
     background: #F5F5F5;
-    height: 586px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
+    br{
+        display: none;
+    }
+
     div.subtitle-container{
         h2{
-            margin-top: 16px;
+            margin: 32px 0;
             text-align: center;
             font-size: 32px;
             font-weight: 700;
@@ -148,6 +193,8 @@ section.features{
     div.feature-cards{
         height: 100%;
         width: 100%;
+        margin-top: 64px;
+        padding-bottom: 32px;
         display: flex;
         align-items: center;
         justify-content: space-around;
@@ -209,23 +256,23 @@ section.ads{
         flex-direction: column;
 
         div.price-cards{
-            height: 515px;
             width: 100%;
             display: flex;
+            flex-direction: row;
             align-items: center;
             justify-content: space-between;
             
             div.price-card{
                 background: #C4C4C4;
-                height: 100%;
+                height: 400px;
             }
 
             div.big {
-                width: 68%;
+                flex: .68;
             }
 
             div.small{
-                width: 28%;
+                flex: .28;
             }
         }
     }
@@ -263,18 +310,19 @@ section.getting-started{
 
         width: 100%;
         display: flex;
+        flex-direction: row;
         align-content: center;
         justify-content: center;
 
         div.content-left{
-            width: 65%;
+            flex: .65;
             height: 388px;
             background: #C4C4C4;
         }
 
         div.content-right{
-            width: 35%;
-            padding: 0 32px;
+            flex: .35;
+            padding-left: 32px;
             display: flex;
             flex-direction: column;
             align-self: center;
