--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,123 +4,159 @@
 <head>
     <title>Zabbix Reports</title>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="theme-color" content="#727176" />
 
     <link rel="stylesheet" type="text/css" href="/stylesheets/index.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/resp_1150.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/resp_945.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/resp_750.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/resp_516.css">
 </head>
 
 <body>
-    <section class="home">
-        <header>
-            <div class="logo">
-                <h1>Zabbix Reports</h1>
-                <img importance="high" src="/images/zabbix-logo.svg" alt="Zabbix Reports Logo" />
-            </div>
-            <nav role="navigation">
-                <ul>
-                    <!-- <li><a href="#">Home</a></li> -->
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#prices">Prices</a></li>
-                    <li><a href="#video">Videos</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Start Now</a></li>
-                </ul>
-            </nav>
-        </header>
-        <article class="home-content">
-            <div class="home-content-left">
-                <h2>Get reports <br /> quickly and easily</h2>
-                <p>With <strong>Zabbix Reports</strong> you can generate data reports from the best data analysis
-                    platforms!</p>
-                <a href="#getting-started">Try it now</a>
-            </div>
-            <div class="home-content-right">
-                <img src="/images/home-illustration.svg" alt="minimalistic work illustration" />
-            </div>
-        </article>
-    </section>
-    <section class="features" id="about">
-        <div class="subtitle-container">
-            <h2>Zabbix Reports is amazing</h2>
-        </div>
-        <div class="feature-cards">
-            <article>
-                <div class="feature-card-img">
-                    <img src="/images/home-illustration.svg" alt="minimalistic work illustration" />
+    <main>
+        <section class="home">
+            <header>
+                <div class="logo">
+                    <h1>Zabbix Reports</h1>
+                    <img importance="high" src="/images/zabbix-logo.svg" alt="Zabbix Reports Logo" />
                 </div>
-                <div class="text-container">
-                    <h3>Lorem ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis erat in molestie faucibus
-                    </p>
-                </div>
-            </article>
-            <article>
-                <div class="feature-card-img">
-                    <img src="/images/home-illustration.svg" alt="minimalistic work illustration" />
-                </div>
-                <div class="text-container">
-                    <h3>Lorem ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis erat in molestie faucibus
-                    </p>
-                </div>
-            </article>
-            <article>
-                <div class="feature-card-img">
-                    <img src="/images/home-illustration.svg" alt="minimalistic work illustration" />
-                </div>
-                <div class="text-container">
-                    <h3>Lorem ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis erat in molestie faucibus
-                    </p>
-                </div>
-            </article>
-        </div>
-    </section>
-    <section class="ads">
-        <article class="prices" id="prices">
-            <div class="subtitle-container">
-                <h2>Start free, Pay only if you like it!</h2>
-            </div>
-            <div class="price-cards">
-                <div class="price-card big"></div>
-                <div class="price-card small"></div>
-            </div>
-        </article>
-        <article class="demo-video" id="video">
-            <div class="subtitle-container">
-                <h2>Learn how to generate your first <br /> report</h2>
-            </div>
-            <div class="video-container">
-                <video controls>
-                    <source src="videos/demo.mp4" type="video/mp4">
-                </video>
-            </div>
-        </article>
-    </section>
-    <section class="getting-started" id="getting-started">
-        <div class="subtitle-container">
-            <h2>Try it now for free!</h2>
-        </div>
-        <div class="content">
-            <div class="content-left">
+                <nav role="navigation" id="desktop-menu">
+                    <ul>
+                        <!-- <li><a href="#">Home</a></li> -->
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#prices">Prices</a></li>
+                        <li><a href="#video">Videos</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Start Now</a></li>
+                    </ul>
+                </nav>
 
+                <div class="show-mobile-menu-icon" id="show-mobile-menu">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <nav role="navigation" class="mobile-menu hide-menu">
+                    <ul>
+                        <!-- <li><a href="#">Home</a></li> -->
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#prices">Prices</a></li>
+                        <li><a href="#video">Videos</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Start Now</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <article class="home-content">
+                <div class="home-content-left">
+                    <div class="text-content">
+                        <h2>Get reports quickly and easily</h2>
+                        <p>With <strong>Zabbix Reports</strong> you can generate data reports from the best data
+                            analysis
+                            platforms!</p>
+                        <a href="#getting-started">Try it now</a>
+                    </div>
+                </div>
+                <div class="home-content-right">
+                    <img src="/images/home-illustration.svg" alt="minimalistic work illustration" />
+                </div>
+            </article>
+        </section>
+        <section class="features" id="about">
+            <div class="subtitle-container">
+                <h2>Zabbix Reports is <br /> amazing</h2>
             </div>
-            <div class="content-right">
-                <h3>Sign in with these credentials</h3>
-                <span>Login: demo</span>
-                <span>Password: demo</span>
-                <div class="link-container">
-                    <a href="#">Try it now</a>
+            <div class="feature-cards">
+                <article>
+                    <div class="feature-card-img">
+                        <img src="/images/home-illustration.svg" alt="minimalistic work illustration" />
+                    </div>
+                    <div class="text-container">
+                        <h3>Lorem ipsum</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis erat in molestie
+                            faucibus
+                        </p>
+                    </div>
+                </article>
+                <article>
+                    <div class="feature-card-img">
+                        <img src="/images/home-illustration.svg" alt="minimalistic work illustration" />
+                    </div>
+                    <div class="text-container">
+                        <h3>Lorem ipsum</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis erat in molestie
+                            faucibus
+                        </p>
+                    </div>
+                </article>
+                <article>
+                    <div class="feature-card-img">
+                        <img src="/images/home-illustration.svg" alt="minimalistic work illustration" />
+                    </div>
+                    <div class="text-container">
+                        <h3>Lorem ipsum</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis erat in molestie
+                            faucibus
+                        </p>
+                    </div>
+                </article>
+            </div>
+        </section>
+        <section class="ads">
+            <article class="prices" id="prices">
+                <div class="subtitle-container">
+                    <h2>Start free, Pay only if you like it!</h2>
+                </div>
+                <div class="price-cards">
+                    <div class="price-card big">
+                        big
+                    </div>
+                    <div class="price-card small">
+                        small
+                    </div>
+                </div>
+            </article>
+            <article class="demo-video" id="video">
+                <div class="subtitle-container">
+                    <h2>Learn how to generate your first <br /> report</h2>
+                </div>
+                <div class="video-container">
+                    <video controls>
+                        <source src="videos/demo.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </article>
+        </section>
+        <section class="getting-started" id="getting-started">
+            <div class="subtitle-container">
+                <h2>Try it now for free!</h2>
+            </div>
+            <div class="content">
+                <div class="content-left">
+
+                </div>
+                <div class="content-right">
+                    <h3>Sign in with these credentials</h3>
+                    <span>Login: demo</span>
+                    <span>Password: demo</span>
+                    <div class="link-container">
+                        <a href="#">Try it now</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        </div>
-    </section>
+            </div>
+        </section>
+    </main>
     <footer>
         <h1>FOOTER</h1>
     </footer>
+    <div id="effect" class="hide-effect"></div>
+
+    <script src="/javascripts/menu.js"></script>
 </body>
 
 </html>
