--- a/src/views/index.html
+++ b/src/views/index.html
@@ -22,7 +22,7 @@
             <header>
                 <div class="logo">
                     <h1>Zabbix Reports</h1>
-                    <img importance="high" src="/images/zabbix-logo.svg" alt="Zabbix Reports Logo" />
+                    <img importance="high" src="/images/logo/logo.svg" alt="Zabbix Reports Logo" />
                 </div>
                 <nav role="navigation" id="desktop-menu">
                     <ul>
@@ -58,7 +58,7 @@
                         <p>With <strong>Zabbix Reports</strong> you can generate data reports from the best data
                             analysis
                             platforms!</p>
-                        <a href="#getting-started">Try it now</a>
+                        <a href="#getting-started" class="try-it-btn">Try it now</a>
                     </div>
                 </div>
                 <div class="home-content-right">
@@ -144,7 +144,7 @@
                     <span>Login: demo</span>
                     <span>Password: demo</span>
                     <div class="link-container">
-                        <a href="#">Try it now</a>
+                        <a href="#" class="try-it-btn">Try it now</a>
                     </div>
                 </div>
             </div>
