--- a/public/stylesheets/index.scss
+++ b/public/stylesheets/index.scss
@@ -1,8 +1,21 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap');
 
-$body-color: #ffffff;
+$body-color: #FFFFFF;
+$primary-blue: #00AAC4;
+$secondary-blue: #005E72;
+$primary-grey: #545F63;
+$secondary-grey: #757E85;
+$effect-color: #414141D9;
+
+$transition-duration: 280ms;
 
 *{
+
+    &::selection{
+        color: white;
+        background: $primary-blue;
+    }
+
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -32,7 +45,7 @@ $body-color: #ffffff;
             top: 0;
             left: 0;
             z-index: 20 !important;
-            background: rgba(46, 46, 46, 0.85);
+            background: $effect-color;
         }
 
         .hide-effect{
@@ -46,6 +59,21 @@ $body-color: #ffffff;
 
     .hide-overflow{
         overflow: hidden !important;
+    }
+
+    
+    .try-it-btn{
+        background: $primary-blue;
+        color: #fff;
+        border-radius: 20px;
+        padding: 8px 16px;
+        font-size: 16px;
+        font-weight: 600;
+        transition: $transition-duration;
+
+        &:hover{
+            background-color: $secondary-blue;
+        }
     }
 }
 
@@ -75,6 +103,10 @@ section.home{
                 width: 0; 
                 height: 0;
             }
+
+            img{
+                width: 160px;
+            }
         }
 
         nav{
@@ -91,16 +123,28 @@ section.home{
         
                     a{
                         font-size: 16px;
-                        color: #000000;
+                        color: $secondary-blue;
                         font-weight: 600;
+                        transition: $transition-duration;
+
+                        &:hover{
+                            color: $primary-blue;
+                        }
                     }
         
                     &:last-child{
                         a{
                             font-weight: 700;
+                            color: $primary-blue;
                             padding: 8px 16px;
                             border-radius: 20px;
-                            border: 2px solid #000000;
+                            border: 2px solid $primary-blue;
+                            transition: $transition-duration;
+
+                            &:hover{
+                                background-color: $primary-blue;
+                                color: white;
+                            }
                         }
                     }
                 }
@@ -132,7 +176,7 @@ section.home{
                     font-size: 48px;
                     font-weight: 700;
                     width: 70%;
-                    color: #3A3A3A;
+                    color: $primary-grey;
                 }
     
                 p{
@@ -140,18 +184,13 @@ section.home{
                     margin-bottom: 32px;
                     font-size: 24px;
                     width: 60%;
-                    color: #727176;
-                    text-align: justify;
+                    color: $secondary-grey;
+                    text-align: start;
                     font-weight: 500;
-                }
-    
-                a{
-                    background: #727176;
-                    color: #fff;
-                    border-radius: 20px;
-                    padding: 8px 16px;
-                    font-size: 16px;
-                    font-weight: 600;
+
+                    strong{
+                        color: $primary-blue;
+                    }
                 }
             }
         }
@@ -342,18 +381,7 @@ section.getting-started{
             }
             
             div.link-container{
-
                 margin-top: 32px;
-                
-                a{
-                    background: #727176;
-                    color: #fff;
-                    border-radius: 20px;
-                    padding: 8px 16px;
-                    font-size: 16px;
-                    font-weight: 600;
-                    
-                }
             }
 
         }
