--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Zabbix Reports</title>
+    <link rel="shortcut icon" href="/images/icons/favicon.ico" />
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -150,13 +151,94 @@
             </div>
             </div>
         </section>
+        <section class="contact">
+            <div class="contact-content">
+                <article class="faq">
+                    <h2>FAQ</h2>
+                    <div class="dropdown">
+                        <div class="row">
+                            <header class="row-header">
+                                <h4>What’s ZABBIX Reports</h4>
+                                <div class="plus-icon">
+                                    <div class="x"></div>
+                                    <div class="y"></div>
+                                </div>
+                            </header>
+                            <div class="dropdown-items hide-dropdown">
+                                <span>That's great</span>
+                                <span>That's amazing</span>
+                                <span>That's shit</span>
+                                <span>That's free</span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <header class="row-header">
+                                <h4>How much Zabbix Reports?</h4>
+                                <div class="plus-icon">
+                                    <div class="x"></div>
+                                    <div class="y"></div>
+                                </div>
+                            </header>
+                            <div class="dropdown-items hide-dropdown">
+                                <span>That's great</span>
+                                <span>That's amazing</span>
+                                <span>That's shit</span>
+                                <span>That's free</span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <header class="row-header">
+                                <h4>What are the payment methods?</h4>
+                                <div class="plus-icon">
+                                    <div class="x"></div>
+                                    <div class="y"></div>
+                                </div>
+                            </header>
+                            <div class="dropdown-items hide-dropdown">
+                                <span>That's great</span>
+                                <span>That's amazing</span>
+                                <span>That's shit</span>
+                                <span>That's free</span>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="contact-form">
+                    <h2>Get in touch</h2>
+                    <h3>Send us your question</h3>
+                    <form action="">
+                        <input type="text" name="name" autocomplete="off" placeholder="Your name">
+                        <input type="email" name="email" autocomplete="off" placeholder="Your email">
+                        <textarea name="message" rows="2" autocomplete="off" autocapitalize="true"
+                            placeholder="What's your question?"></textarea>
+                            <button type="submit">Submit</button>
+                    </form>
+                </article>
+            </div>
+        </section>
     </main>
     <footer>
-        <h1>FOOTER</h1>
+        <div class="footer-content">
+            <div class="right">
+                <img src="/images/logo/footer-logo.svg" alt="Zabbix Reports Logo">
+                <p class="copy">&copy 2019 Service Monit All rights reserved</p>
+            </div>
+            <div class="left">
+                <nav role="navigation">
+                    <ul>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Prices</a></li>
+                        <li><a href="#">Videos</a></li>
+                        <li><a href="#">Start now</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </footer>
     <div id="effect" class="hide-effect"></div>
 
     <script src="/javascripts/menu.js"></script>
+    <script src="/javascripts/dropdown.js"></script>
 </body>
 
 </html>
