--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -267,7 +267,7 @@ section.features div.subtitle-container h2 {
 section.features div.feature-cards {
   height: 100%;
   width: 100%;
-  margin-top: 64px;
+  margin-top: 16px;
   padding-bottom: 32px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -444,9 +444,9 @@ section.getting-started div.content div.content-left {
 }
 
 section.getting-started div.content div.content-right {
-  -webkit-box-flex: .35;
-      -ms-flex: .35;
-          flex: .35;
+  -webkit-box-flex: .4;
+      -ms-flex: .4;
+          flex: .4;
   padding-left: 32px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -479,23 +479,34 @@ section.getting-started div.content div.content-right div.link-container {
   margin-top: 32px;
 }
 
-footer {
-  width: 100%;
-  height: 200px;
-  font-size: 20px;
-  background: #3A3A3A;
-  color: #fff;
+section.contact {
+  padding: 128px;
+}
+
+section.contact div.contact-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-footer h1 {
+section.contact div.contact-content article.faq {
+  -webkit-box-flex: .4;
+      -ms-flex: .4;
+          flex: .4;
+}
+
+section.contact div.contact-content article.faq h2 {
+  font-size: 32px;
+  color: #005E72;
+}
+
+section.contact div.contact-content article.faq div.dropdown {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -503,10 +514,368 @@ footer h1 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-line-pack: center;
-      align-content: center;
+  width: 100%;
+  margin-top: 32px;
+}
+
+section.contact div.contact-content article.faq div.dropdown div.row {
+  padding: 8px 8px 0px 4px;
+  border-bottom: 0.5px solid #cfcfcf;
+  cursor: pointer;
+}
+
+section.contact div.contact-content article.faq div.dropdown div.row:last-child {
+  border-bottom: none !important;
+}
+
+section.contact div.contact-content article.faq div.dropdown div.row header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+section.contact div.contact-content article.faq div.dropdown div.row header:hover h4 {
+  color: #00AAC4;
+}
+
+section.contact div.contact-content article.faq div.dropdown div.row header:hover div.plus-icon div {
+  background: #00AAC4;
+}
+
+section.contact div.contact-content article.faq div.dropdown div.row header h4 {
+  font-size: 20px;
+  color: #545F63;
+  font-weight: 400;
+  -webkit-transition: 280ms;
+  transition: 280ms;
+}
+
+section.contact div.contact-content article.faq div.dropdown div.row header div.plus-icon {
+  position: relative;
+  width: 12px;
+  height: 12px;
+}
+
+section.contact div.contact-content article.faq div.dropdown div.row header div.plus-icon div {
+  position: absolute;
+  width: 80%;
+  height: 2px;
+  background: #545F63;
+  -webkit-transition: 280ms;
+  transition: 280ms;
+}
+
+section.contact div.contact-content article.faq div.dropdown div.row header div.plus-icon div.x {
+  top: 50%;
+  left: 0;
+}
+
+section.contact div.contact-content article.faq div.dropdown div.row header div.plus-icon div.y {
+  top: 50%;
+  -webkit-transform: rotateZ(90deg);
+          transform: rotateZ(90deg);
+}
+
+section.contact div.contact-content article.faq div.dropdown div.row header div.plus-icon .change-icon {
+  opacity: 0;
+}
+
+section.contact div.contact-content article.faq div.dropdown div.row > div.dropdown-items {
+  margin-bottom: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  width: 100%;
+  margin-top: 8px;
+  -webkit-transition-property: height, opacity;
+  transition-property: height, opacity;
+  -webkit-transition-duration: 400ms, 100ms;
+          transition-duration: 400ms, 100ms;
+  -webkit-transition-delay: 0, 1500ms;
+          transition-delay: 0, 1500ms;
+  z-index: 5;
+}
+
+section.contact div.contact-content article.faq div.dropdown div.row > div.dropdown-items span {
+  z-index: 200;
+  position: relative;
+  padding: 8px;
+  color: #545F63;
+  background: #BAB9BB;
+  width: 100%;
+  border-bottom: 1px solid #9c9c9c;
+}
+
+section.contact div.contact-content article.faq div.dropdown div.row > div.dropdown-items span:hover {
+  color: #00AAC4;
+  cursor: default;
+}
+
+section.contact div.contact-content article.faq div.dropdown div.row .hide-dropdown {
+  margin-bottom: 0 !important;
+}
+
+section.contact div.contact-content article.faq div.dropdown div.row .hide-dropdown span {
+  position: absolute !important;
+  top: 0 !important;
+  left: 0 !important;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+section.contact div.contact-content article.contact-form {
+  -webkit-box-flex: .4;
+      -ms-flex: .4;
+          flex: .4;
+}
+
+section.contact div.contact-content article.contact-form h2 {
+  font-size: 32px;
+  color: #005E72;
+}
+
+section.contact div.contact-content article.contact-form h3 {
+  font-size: 20px;
+  margin: 8px 0;
+  color: #545F63;
+  font-weight: 700;
+  position: relative;
+}
+
+section.contact div.contact-content article.contact-form form {
+  display: -ms-grid;
+  display: grid;
+  gap: 8px;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  grid-auto-columns: minmax(2, 2);
+  grid-auto-rows: auto;
+}
+
+section.contact div.contact-content article.contact-form form button {
+  cursor: pointer;
+  background: #00AAC4;
+  color: #fff;
+  margin-top: 16px;
+  border-radius: 25px;
+  padding: 12px;
+  font-size: 16px;
+  font-weight: 600;
+  -webkit-transition: 280ms;
+  transition: 280ms;
+  border: none !important;
+}
+
+section.contact div.contact-content article.contact-form form button:hover {
+  background-color: #005E72;
+}
+
+section.contact div.contact-content article.contact-form form input {
+  font-family: 'Montserrat', sans-serif;
+  grid-column: span 1;
+  -ms-grid-row: 1;
+      grid-row-start: 1;
+  padding: 16px 4px 4px 4px;
+  font-size: 16px;
+  color: #545F63;
+  border: none;
+  position: relative;
+  border-bottom: 0.5px solid #BAB9BB;
+  -webkit-transition: 280ms;
+  transition: 280ms;
+}
+
+section.contact div.contact-content article.contact-form form input:focus {
+  outline: 0;
+  border-color: #00AAC4;
+  border-width: 2px;
+  padding: 14px 4px 4px 4px;
+}
+
+section.contact div.contact-content article.contact-form form input:focus::-webkit-input-placeholder {
+  color: #00AAC4;
+}
+
+section.contact div.contact-content article.contact-form form input:focus:-ms-input-placeholder {
+  color: #00AAC4;
+}
+
+section.contact div.contact-content article.contact-form form input:focus::-ms-input-placeholder {
+  color: #00AAC4;
+}
+
+section.contact div.contact-content article.contact-form form input:focus::placeholder {
+  color: #00AAC4;
+}
+
+section.contact div.contact-content article.contact-form form input::-webkit-input-placeholder {
+  color: #BAB9BB;
+  font-size: 17px;
+  font-weight: 400 !important;
+}
+
+section.contact div.contact-content article.contact-form form input:-ms-input-placeholder {
+  color: #BAB9BB;
+  font-size: 17px;
+  font-weight: 400 !important;
+}
+
+section.contact div.contact-content article.contact-form form input::-ms-input-placeholder {
+  color: #BAB9BB;
+  font-size: 17px;
+  font-weight: 400 !important;
+}
+
+section.contact div.contact-content article.contact-form form input::placeholder {
+  color: #BAB9BB;
+  font-size: 17px;
+  font-weight: 400 !important;
+}
+
+section.contact div.contact-content article.contact-form form textarea {
+  grid-column: span 2;
+  -ms-grid-row: 2;
+      grid-row-start: 2;
+  padding: 16px 4px 4px 4px;
+  font-family: 'Montserrat', sans-serif;
+  color: #545F63;
+  font-size: 16px;
+  border: none;
+  position: relative;
+  max-width: 100%;
+  border-bottom: 0.5px solid #BAB9BB;
+  -webkit-transition: 280ms;
+  transition: 280ms;
+}
+
+section.contact div.contact-content article.contact-form form textarea:focus {
+  outline: 0;
+  border-color: #00AAC4;
+  border-width: 2px;
+  padding: 20px 4px 4px 4px;
+}
+
+section.contact div.contact-content article.contact-form form textarea:focus::-webkit-input-placeholder {
+  color: #00AAC4;
+}
+
+section.contact div.contact-content article.contact-form form textarea:focus:-ms-input-placeholder {
+  color: #00AAC4;
+}
+
+section.contact div.contact-content article.contact-form form textarea:focus::-ms-input-placeholder {
+  color: #00AAC4;
+}
+
+section.contact div.contact-content article.contact-form form textarea:focus::placeholder {
+  color: #00AAC4;
+}
+
+section.contact div.contact-content article.contact-form form textarea::-webkit-input-placeholder {
+  color: #BAB9BB;
+  font-size: 15.8px;
+}
+
+section.contact div.contact-content article.contact-form form textarea:-ms-input-placeholder {
+  color: #BAB9BB;
+  font-size: 15.8px;
+}
+
+section.contact div.contact-content article.contact-form form textarea::-ms-input-placeholder {
+  color: #BAB9BB;
+  font-size: 15.8px;
+}
+
+section.contact div.contact-content article.contact-form form textarea::placeholder {
+  color: #BAB9BB;
+  font-size: 15.8px;
+}
+
+footer {
+  width: 100%;
+  padding: 32px 64px;
+  background: #005E72;
+}
+
+footer div.footer-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+footer div.footer-content div.right img {
+  width: 281px;
+}
+
+footer div.footer-content div.right p.copy {
+  color: white;
+  margin-top: 8px;
+  font-size: 16px;
+}
+
+footer div.footer-content div.left nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+footer div.footer-content div.left nav ul li {
+  margin: 4px 0;
+}
+
+footer div.footer-content div.left nav ul li a {
+  color: white;
+  font-size: 16px;
+  position: relative;
+  -webkit-transition: 280ms;
+  transition: 280ms;
+}
+
+footer div.footer-content div.left nav ul li a::after {
+  position: absolute;
+  content: '';
+  top: 100%;
+  left: 0;
+  width: 0;
+  height: 1px;
+  background: white;
+  -webkit-transition: 280ms;
+  transition: 280ms;
+}
+
+footer div.footer-content div.left nav ul li a:hover::after {
+  width: 100%;
 }
 /*# sourceMappingURL=index.css.map */
