--- a/public/stylesheets/index.scss
+++ b/public/stylesheets/index.scss
@@ -6,7 +6,6 @@ $secondary-blue: #005E72;
 $primary-grey: #545F63;
 $secondary-grey: #757E85;
 $effect-color: #414141D9;
-
 $transition-duration: 280ms;
 
 *{
@@ -232,7 +231,7 @@ section.features{
     div.feature-cards{
         height: 100%;
         width: 100%;
-        margin-top: 64px;
+        margin-top: 16px;
         padding-bottom: 32px;
         display: flex;
         align-items: center;
@@ -360,7 +359,7 @@ section.getting-started{
         }
 
         div.content-right{
-            flex: .35;
+            flex: .4;
             padding-left: 32px;
             display: flex;
             flex-direction: column;
@@ -388,20 +387,297 @@ section.getting-started{
     }
 }
 
+section.contact{
+    padding: 128px;
+
+    div.contact-content{
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+
+        article.faq{
+
+            flex: .4;
+
+            h2{
+                font-size: 32px;
+                color: $secondary-blue;
+            }
+
+            div.dropdown{
+                display: flex;
+                flex-direction: column;
+                width: 100%;
+                margin-top: 32px;
+
+                div.row{
+                    padding: 8px 8px 0px 4px;
+                    border-bottom: 0.5px solid rgb(207, 207, 207);
+                    cursor: pointer;
+
+                    &:last-child{
+                        border-bottom: none !important;
+                    }
+
+                    header{
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+
+                        &:hover{
+                            h4{
+                                color: $primary-blue;
+                            }
+                            div.plus-icon{
+                                div{
+                                    background: $primary-blue;
+                                }
+                            }
+                        }
+                        
+                        h4{
+                            font-size: 20px;
+                            color: $primary-grey;
+                            font-weight: 400;
+                            transition: $transition-duration;
+                        }
+                        div.plus-icon{
+                            position: relative;
+                            width: 12px;
+                            height: 12px;
+                            
+                            div{
+                                position: absolute;
+                                width: 80%;
+                                height: 2px;
+                                background: $primary-grey;
+                                transition: $transition-duration;
+                            }
+
+                            div.x{
+                                top: 50%;
+                                left: 0;
+                            }
+
+                            div.y{
+                                top: 50%;
+                                transform: rotateZ(90deg);
+                            }
+
+                            .change-icon{
+                                opacity: 0;
+                            }
+                        }
+                    }
+
+                    & > div.dropdown-items{
+                        margin-bottom: 16px;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+                        width: 100%;
+                        margin-top: 8px;
+                        transition-property: height, opacity;
+                        transition-duration: 400ms, 100ms;
+                        transition-delay: 0, 1500ms;
+                        z-index: 5;
+
+                        span{
+                            z-index: 200;
+                            position: relative;
+                            padding: 8px;
+                            color: $primary-grey;
+                            background: #BAB9BB;
+                            width: 100%;
+                            border-bottom: 1px solid rgb(156, 156, 156);
+
+                            &:hover{
+                                color: $primary-blue;
+                                cursor: default;
+                            }
+                        }
+                    }
+
+                    .hide-dropdown{
+                        margin-bottom: 0 !important;
+                        span{
+                            position: absolute !important;
+                            top: 0 !important;
+                            left: 0 !important;
+                            visibility: hidden;
+                            pointer-events: none;
+                        }
+                    }
+                }
+            }
+        }
+
+        article.contact-form{
+            
+            flex: .4;
+
+            h2{
+                font-size: 32px;
+                color: $secondary-blue;
+            }
+
+            h3{
+                font-size: 20px;
+                margin: 8px 0;
+                color: $primary-grey;
+                font-weight: 700;
+                position: relative;
+            }
+
+            form{
+                display: grid;
+                gap: 8px;
+                grid-template-columns: 1fr 1fr;
+                grid-auto-columns: minmax(2, 2);
+                grid-auto-rows: auto;
+
+                button{
+                    cursor: pointer;
+                    background: $primary-blue;
+                    color: #fff;
+                    margin-top: 16px;
+                    border-radius: 25px;
+                    padding: 12px;
+                    font-size: 16px;
+                    font-weight: 600;
+                    transition: $transition-duration;
+                    border: none !important;
+
+                    &:hover{
+                        background-color: $secondary-blue;
+                    }
+                }
+
+                input{
+                    font-family: 'Montserrat', sans-serif;
+                    grid-column: span 1;
+                    grid-row-start: 1;
+                    padding: 16px 4px 4px 4px;
+                    font-size: 16px;
+                    color: $primary-grey;
+                    border: none;
+                    position: relative;
+                    border-bottom: 0.5px solid #BAB9BB;
+                    transition: $transition-duration;
+
+                    &:focus{
+                        outline: 0;
+                        border-color: $primary-blue;
+                        border-width: 2px;
+                        padding: 14px 4px 4px 4px;
+
+                        &::placeholder{
+                            color: $primary-blue;
+                        }
+                    }
+                    
+                    &::placeholder{
+                        color: #BAB9BB;
+                        font-size: 17px;
+                        font-weight: 400 !important;
+                    }
+                }
+
+                textarea{
+                    grid-column: span 2;
+                    grid-row-start: 2;
+                    padding: 16px 4px 4px 4px;
+                    font-family: 'Montserrat', sans-serif;
+                    color: $primary-grey;
+                    font-size: 16px;
+                    border: none;
+                    position: relative;
+                    max-width: 100%;
+                    border-bottom: 0.5px solid #BAB9BB;
+                    transition: $transition-duration;
+
+                    &:focus{
+                        outline: 0;
+                        border-color: $primary-blue;
+                        border-width: 2px;
+                        padding: 20px 4px 4px 4px;
+
+                        &::placeholder{
+                            color: $primary-blue;
+                        }
+                    }
+
+                    &::placeholder{
+                        color: #BAB9BB;
+                        font-size: 15.8px;
+                    }
+                }
+            }
+        }
+    }
+}
+
 footer{
     width: 100%;
-    height: 200px;
-    font-size: 20px;
-    background: #3A3A3A;
-    color: #fff;
-    display: flex;
-    align-content: center;
-    justify-content: center;
+    padding: 32px 64px;    
+    background: $secondary-blue;
 
-    h1{
+    div.footer-content{
         display: flex;
-        flex-direction: column;
-        align-content: center;
-        justify-content: center;
+        align-items: center;
+        justify-content: space-between;
+    
+        div.right{
+            img{
+                width: 281px;
+            }
+    
+            p.copy{
+                color: white;
+                margin-top: 8px;
+                font-size: 16px;
+            }
+        }
+    
+        div.left{
+            nav{
+                ul{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-end;
+                    justify-content: space-between;
+    
+                    li{
+                        margin: 4px 0;
+    
+                        a{
+                            color: white;
+                            font-size: 16px;
+                            position: relative;
+                            transition: $transition-duration;
+
+                            &::after{
+                                position: absolute;
+                                content: '';
+                                top: 100%;
+                                left: 0;
+                                width: 0;
+                                height: 1px;
+                                background: white;
+                                transition: $transition-duration;
+                            }
+
+                            &:hover{
+                                &::after{
+                                    width: 100%;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
+
 }
