--- a/public/stylesheets/resp_516.css
+++ b/public/stylesheets/resp_516.css
@@ -119,5 +119,32 @@
     padding: 16px 64px;
     border-radius: 25px;
   }
+  section.contact {
+    padding: 32px 16px;
+  }
+  section.contact div.contact-content article.faq div.dropdown div.row header h4 {
+    font-size: 16px;
+  }
+  section.contact div.contact-content article.contact-form form {
+    display: -ms-grid;
+    display: grid;
+    gap: 8px;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+  }
+  section.contact div.contact-content article.contact-form form input[name="email"] {
+    -ms-grid-row: 2;
+        grid-row-start: 2;
+  }
+  section.contact div.contact-content article.contact-form form textarea {
+    grid-column: span 1;
+    -ms-grid-row: 3;
+        grid-row-start: 3;
+  }
+  footer div.footer-content div.right img {
+    width: 140px;
+  }
 }
 /*# sourceMappingURL=resp_516.css.map */
