--- a/public/stylesheets/resp_750.css
+++ b/public/stylesheets/resp_750.css
@@ -204,5 +204,50 @@
   section.getting-started div.content div.content-right div.link-container a {
     font-size: 15px;
   }
+  footer {
+    padding: 32px;
+  }
+  footer div.footer-content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  footer div.footer-content div.right {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    padding-bottom: 16px;
+    text-align: center;
+    border-bottom: 1px solid rgba(0, 50, 61, 0.39);
+  }
+  footer div.footer-content div.right img {
+    width: 180px;
+  }
+  footer div.footer-content div.right p.copy {
+    font-size: 14px;
+  }
+  footer div.footer-content div.left {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    margin-top: 16px;
+  }
+  footer div.footer-content div.left nav ul {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  footer div.footer-content div.left nav ul li {
+    padding: 0;
+  }
+  footer div.footer-content div.left nav ul li a {
+    font-size: 14px;
+    padding: 16px 8px;
+  }
+  footer div.footer-content div.left nav ul li a::after {
+    display: none;
+  }
 }
 /*# sourceMappingURL=resp_750.css.map */
