--- a/public/stylesheets/resp_945.css
+++ b/public/stylesheets/resp_945.css
@@ -84,5 +84,34 @@
   section.getting-started div.content div.content-right div.link-container a {
     font-size: 15px;
   }
+  section.contact {
+    padding: 64px 32px;
+  }
+  section.contact div.contact-content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+  }
+  section.contact div.contact-content article.faq {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    width: 100%;
+    margin-bottom: 32px;
+  }
+  section.contact div.contact-content article.faq div.dropdown div.row header h4 {
+    font-size: 18px;
+  }
+  section.contact div.contact-content article.contact-form {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    width: 100%;
+  }
+  footer {
+    padding: 32px 16px;
+  }
 }
 /*# sourceMappingURL=resp_945.css.map */
