--- a/public/stylesheets/resp_945.scss
+++ b/public/stylesheets/resp_945.scss
@@ -142,4 +142,37 @@
             }
         }
     }
+
+    section.contact{
+        padding: 64px 32px;
+    
+        div.contact-content{
+
+            flex-direction: column;
+            width: 100%;
+
+            article.faq{    
+                flex: 1;
+                width: 100%;
+                margin-bottom: 32px;
+                div.dropdown{
+                    div.row{    
+                        header{
+                            h4{
+                                font-size: 18px;
+                            }
+                        }
+                    }
+                }
+            }
+            article.contact-form{
+                flex: 1;
+                width: 100%;
+            }
+        }
+    }
+    
+    footer{
+        padding: 32px 16px;
+    }
 }
