--- a/public/stylesheets/index.scss
+++ b/public/stylesheets/index.scss
@@ -389,6 +389,7 @@ section.getting-started{
 
 section.contact{
     padding: 128px;
+    max-height: 449px;
 
     div.contact-content{
         display: flex;
@@ -419,12 +420,8 @@ section.contact{
                         border-bottom: none !important;
                     }
 
-                    header{
-                        display: flex;
-                        align-items: center;
-                        justify-content: space-between;
-
-                        &:hover{
+                    &:hover{
+                        header{
                             h4{
                                 color: $primary-blue;
                             }
@@ -434,6 +431,12 @@ section.contact{
                                 }
                             }
                         }
+                    }
+
+                    header{
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
                         
                         h4{
                             font-size: 20px;
@@ -620,7 +623,8 @@ section.contact{
 
 footer{
     width: 100%;
-    padding: 32px 64px;    
+    padding: 32px 64px;
+    margin-top: 64px;
     background: $secondary-blue;
 
     div.footer-content{
