mail route and controller improved

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -206,7 +206,7 @@
                 <article class="contact-form">
                     <h2>Get in touch</h2>
                     <h3>Send us your question</h3>
-                    <form action="/question" method="POST">
+                    <form action="/message-sended" method="POST">
                         <input value="victor" type="text" name="name" autocomplete="off" placeholder="Your name">
                         <input value="vituwot@gmail.com" type="email" name="email" autocomplete="off" placeholder="Your email">
                         <textarea name="message" rows="3" autocomplete="off" autocapitalize="true"
